# qijani-recommedation-system

./: .gitignore  Makefile  embedder.py  llama.ipynb  pinecone_example.ipynb  requirements.txt  research.ipynb  urls.xlsx
src/config/: pinecone_config.py
src/deployment/: Dockerfile  Makefile  docker-compose.yml  graph.py  langgraph.json  prompt.py  pyproject.toml  requirements.txt  state.py
src/deployment/qijani_recommendation_engine/: graph.py  prompt.py  state.py
src/services/: embedding_cache.py  recommendation_engine.py  retriever_engine.py  retrival_engine.py  vector_store.py
src/utils/: convert_gdrive_link.py  document_loader.py
