[project]
name = "qijani-recommendation-engine"
version = "0.1.0"
description = "meal recommendation engine for qijani"
authors = [
    {name = "Iain Mosima",email = "iainmosima@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "langgraph>=0.2.55",
    "langchain-community (>=0.3.21,<0.4.0)",
    "tavily-python>=0.5.0",
    "langchain-openai>=0.1.1",
    "openai>=1.12.0",
    "langchain_openai>=0.3.9",
    "python-dotenv==1.0.1",
    "wikipedia (>=1.4.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"